<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/dataFragment"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.data.DataFragment"
        android:label="@string/data_fragment"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/webViewFragment"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.web.WebViewFragment"
        android:label="@string/web_view_fragment"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/backgroundTaskFragment"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.worker.BackgroundTaskFragment"
        android:label="@string/background_task"
        tools:layout="@layout/fragment_background_task" />
    <fragment
        android:id="@+id/sensorFragment"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.sensor.SensorFragment"
        android:label="@string/sensor"
        tools:layout="@layout/fragment_sensor" />
    <fragment
        android:id="@+id/audioFragment"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.audio.AudioFragment"
        android:label="@string/audio"
        tools:layout="@layout/fragment_audio" />
    <fragment
        android:id="@+id/cameraFragment"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.camera.CameraFragment"
        android:label="@string/camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/fileWorkFragment"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.filework.FileWorkFragment"
        android:label="@string/filework"
        tools:layout="@layout/fragment_file_work" />
    <fragment
        android:id="@+id/currencyFragment"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.сurrency.CurrencyFragment"
        android:label="@string/currency"
        tools:layout="@layout/fragment_currency" />
    <fragment
        android:id="@+id/mapFragment"
        android:name="ru.mirea.lozhnichenkoas.mireaproject.ui.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />
</navigation>